# pilot-deepagents-dynamic-subagents

./: README.md
.github/workflows/: copilot-setup-steps.yml
src/: .env.sample  README.md  doctor.py  graph.py  langgraph.json  main.py  pyproject.toml
src/notebooks/: 01-verify-dynamic-subagents.ipynb
src/tests/: test_dynamic_subagents.py
