[project]
name = "pilot-deepagents-dynamic-subagents"
version = "0.1.0"
description = "Dynamic Subagents pilot with DeepAgents"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "deepagents==0.6.12",
    "langchain-anthropic==1.4.8",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
studio = [
    "langgraph-cli[inmem]==0.4.30",
]
