[project]
name = "pilot-deepagents-dynamic-subagents"
version = "0.1.0"
description = "Dynamic Subagents pilot with DeepAgents on NVIDIA NIM APIs"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "deepagents==0.6.12",
    "langchain-nvidia-ai-endpoints>=0.3.0",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
studio = [
    "langgraph-cli[inmem]==0.4.30",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
notebook = [
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
]
